<resources>
    <string name="app_name">NeoStore</string>
    <string name="app_first_name">Neo</string>
    <string name="app_second_name">STORE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="loginPageSignUp">Don\'t have an account? Sign up.</string>
    <string name="email">Email ID</string>
    <string name="firstName">First Name</string>

    <string name="lastName">Last Name</string>
    <string name="comnfirmPassword">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="phone">Phone No.</string>
    <string name="termsAndConditions"><![CDATA[I agree to Terms & Conditions]]></string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="cd_tables">Tables Tab</string>
    <string name="cd_sofas">Sofas Tab</string>
    <string name="cd_chairs">Chairs Tab</string>
    <string name="cd_cupboards">Cupboards Tab</string>
    <string name="title_my_cart">My Cart</string>
    <string name="title_tables">Tables</string>
    <string name="title_sofas">Sofas</string>
    <string name="title_chairs">Chairs</string>
    <string name="title_cupboards">Cupboards</string>
    <string name="title_my_account">My Account</string>
    <string name="title_edit_profle">Edit Profile</string>
    <string name="title_store_locator">Store Locator</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_logout">Logout</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_address_list">Address</string>
    <string name="title_add_address">Add Address</string>
    <string name="userImage">User Image</string>
    <string name="cd_userImage" />
    <string name="userRealName">John Doe</string>
    <string name="userEmail">JohnDoe@gmail.com</string>
    <string name="dob">Date of Birth</string>
    <string name="custom_content_desc">Date Picker</string>

    <string name="default_value">Not Available</string>
    <string name="btn_edit_profile">EDIT PROFILE</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_submit">Submit</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_save">Save</string>

    <string name="flow_my_account">MyAccountFlow</string>

    <string name="format_price">"Rs %s"</string>
    <string name="cd_share_btn">Share Button</string>
    <string name="description">Description</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="btn_rate">Rate</string>
    <string name="cd_product_image">Product Image</string>

    <string name="display_category_name">Category - %s</string>
    <string name="display_price">\u20B9 %,d</string>
    <string name="display_price_float">\u20B9 %,.2f</string>
    <string name="btn_cancel">Cancel</string>
    <string name="quantity">Qty. :</string>
    <string name="total">Total :</string>
    <string name="btn_order_now">Order Now</string>
    <string name="cd_delete_item">Delete Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="action_remove">Remove</string>
    <string name="action_cancel">Cancel</string>
    <string name="remove_message">Are you sure you want to remove this item?</string>
    <string name="cart_empty">Cart Empty!</string>
    <string name="loading">Loading…</string>
    <string name="logout_question_text">Are you sure you want to logout?</string>
    <string name="order_id">Order ID : %d</string>
    <string name="order_date">Ordered Date : %s</string>
    <string name="cd_load_status">Error</string>
    <string name="quantity_format">Qty : %d</string>
    <string name="no_orders">No orders placed!</string>

    <string-array name="items">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="streetName">Street Name</string>
    <string name="address">Address</string>
    <string name="apartment">Apartment, suite, etc.</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="btn_add_address">Add Address</string>
    <string name="name">Name</string>

</resources>
