<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/store_flow_navigation" app:startDestination="@id/homeScreenFragment">

    <fragment android:id="@+id/homeScreenFragment"
              android:name="com.deadshot.android.projectneostore.ui.homeScreen.HomeScreenFragment"
              android:label="@string/app_name"/>
    <fragment android:id="@+id/myAccountFragment"
              android:name="com.deadshot.android.projectneostore.ui.myAccount.MyAccountFragment"
              android:label="@string/title_my_account">
        <action android:id="@+id/action_myAccountFragment_to_editProfileFragment"
                app:destination="@id/editProfileFragment" app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right" app:popUpTo="@+id/myAccountFragment"/>
    </fragment>
    <fragment android:id="@+id/editProfileFragment"
              android:name="com.deadshot.android.projectneostore.ui.editProfile.EditProfileFragment"
              android:label="@string/title_edit_profle"/>
</navigation>