<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="resetPasswordViewModel"
                type="com.deadshot.android.projectneostore.ui.resetPassword.ResetPasswordViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.resetPassword.ResetPasswordFragment" android:paddingStart="16dp"
            android:paddingEnd="16dp" tools:ignore="ExtraText">

        //Appname "Store"
        <TextView
                android:text="@string/app_second_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_AppSecondName"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/tv_AppFirstName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextSyleAppName" android:layout_marginTop="32dp"/>

        //Appname "Neo"
        <TextView
                android:text="@string/app_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_AppFirstName"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tv_AppSecondName"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_AppSecondName"
                style="@style/TextSyleAppName"/>

        //Old Password
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldPasswordInputLayout"
                android:hint="@string/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_AppSecondName" android:textColorHint="@color/colorPrimary"
                app:passwordToggleEnabled="true" app:passwordToggleTint="@color/colorPrimary">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPasswordInputEditLayout"
                    tools:text="Adolf"
                    android:text="@={resetPasswordViewModel.oldPassword}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        //New Password
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordInputLayout"
                android:hint="@string/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oldPasswordInputLayout"
                android:textColorHint="@color/colorPrimary" app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPasswordInputEditLayout"
                    tools:text="Hitler"
                    android:text="@={resetPasswordViewModel.newPassword}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        //Confirm Password
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordInputLayout"
                android:hint="@string/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newPasswordInputLayout"
                android:textColorHint="@color/colorPrimary" app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordInputEditLayout"
                    tools:text="Hitler"
                    android:text="@={resetPasswordViewModel.confirmPassword}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        //Submit Button
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> resetPasswordViewModel.onClickSave()}"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputLayout"
                android:text="@string/btn_save" style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                app:layout_constraintEnd_toEndOf="@+id/confirmPasswordInputLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>