<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="loginViewModel"
                type="com.deadshot.android.projectneostore.ui.login.LoginViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/LoginSignupStyle"
            android:padding="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ExtraText"
                tools:context="com.deadshot.android.projectneostore.ui.login.LoginFragment"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:layout_gravity="center"
                android:theme="@style/AppTheme">

            //Appname "Store"
            <TextView
                    android:text="@string/app_second_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_AppSecondName"
                    style="@style/TextSyleAppName"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/tv_AppFirstName"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />

            //Appname "Neo"
            <TextView
                    android:text="@string/app_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_AppFirstName"
                    android:textColor="@android:color/white"
                    android:textSize="49sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/tv_AppSecondName"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_AppSecondName"
                    android:textStyle="bold"
            />

            <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="@+id/tv_AppSecondName"
                    app:layout_constraintStart_toStartOf="@+id/tv_AppFirstName"
                    style="@style/CustomInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/tv_AppSecondName"
                    android:id="@+id/usernameInputLayout"
                    app:boxStrokeColor="#CCFFFFFF"
                    app:hintTextColor="#DBFFFFFF"
                    app:helperTextTextColor="#99FFFFFF"
                    app:layout_constraintWidth_max="wrap"
                    app:layout_constraintWidth_min="wrap"
                    app:layout_constraintWidth_default="wrap"
                    app:layout_constrainedWidth="false"
                    app:boxBackgroundMode="outline" app:boxBackgroundColor="#33FFFFFF" app:boxStrokeWidth="0dp"
                    android:textColorHint="#DBFFFFFF" android:background="#05FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameInputEditLayout"
                        style="@style/InnerMaterialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={loginViewModel.email}"
                        android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>
            //Username

            //Password
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:counterTextColor="@android:color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="#DBFFFFFF"
                    app:layout_constraintEnd_toEndOf="@+id/usernameInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/usernameInputLayout"
                    android:layout_marginTop="@dimen/MarginTopMaterialInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout"
                    android:id="@+id/passwordInputLayout"
                    app:boxStrokeColor="#CCFFFFFF"
                    app:hintTextColor="#DBFFFFFF"
                    app:passwordToggleEnabled="true"
                    app:helperTextTextColor="@android:color/white"
                    app:boxBackgroundMode="outline" app:counterEnabled="false" app:boxBackgroundColor="#33FFFFFF"
                    app:passwordToggleTint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordInputEditLayout"
                        style="@style/InnerMaterialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={loginViewModel.password}"
                        android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            //Login button

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_Login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:onClick="@{() -> loginViewModel.onLoginButtonClick()}"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    app:backgroundTint="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

            //forgot password

            <TextView
                    android:id="@+id/tv_ForgotPassword"
                    style="@style/focusableTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/forgotPassword"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_Login"
                    app:layout_constraintStart_toStartOf="@+id/btn_Login"
                    app:layout_constraintTop_toBottomOf="@+id/btn_Login" />


            //Sign up

            <TextView
                    android:id="@+id/tv_LoginPageSignUp"
                    style="@style/focusableTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/loginPageSignUp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_ForgotPassword"
                    app:layout_constraintStart_toStartOf="@+id/tv_ForgotPassword"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ForgotPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/progress_bar" tools:visibility="visible"
                android:layout_gravity="center" android:visibility="gone" android:indeterminate="true"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>