<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navHeader"
    android:layout_width="match_parent"
    android:layout_height="214dp"
    android:background="@color/colorPrimaryDark"
    android:padding="16dp"
    android:theme="@style/AppTheme_2">

    <androidx.cardview.widget.CardView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="42dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="#FFFFFF" android:id="@+id/cardView">

        <ImageView
                android:id="@+id/iv_userImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person_black_24dp"
                android:scaleType="centerCrop" android:contentDescription="@string/cd_userImage"/>

    </androidx.cardview.widget.CardView>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_userRealName" app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView" android:textSize="22sp" android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:text="John Doe" android:text="@string/userRealName"/>
    <TextView
            android:text="@string/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_userEmail" app:layout_constraintEnd_toEndOf="@+id/tv_userRealName"
            app:layout_constraintStart_toStartOf="@+id/tv_userRealName" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_userRealName" android:textColor="#FFFFFF"/>
    <!--<ImageView-->
        <!--android:id="@+id/navHeaderImage"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginStart="@dimen/horizontal_margin"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="@dimen/horizontal_margin"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:scaleType="fitCenter"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:srcCompat="@drawable/nav_header" />-->

</androidx.constraintlayout.widget.ConstraintLayout>